RESOLVED FIXED23734
REGRESSION: blogs.msdn.com content pane is blank
https://bugs.webkit.org/show_bug.cgi?id=23734
Summary REGRESSION: blogs.msdn.com content pane is blank
Jon@Chromium
Reported 2009-02-04 09:57:36 PST
Recently a change went into webkit which is causing blogs.msdn.com to have a blank content pane. You can see the DOM in the Inspector so it appears to be parsed correctly.
Attachments
Jon@Chromium
Comment 1 2009-02-04 09:59:00 PST
See Chromium bug http://code.google.com/p/chromium/issues/detail?id=7190 We are trying to get a reduction or a range of changes that might have introduced this bug.
Mark Rowe (bdash)
Comment 2 2009-02-04 11:46:36 PST
Dave Hyatt
Comment 3 2009-02-04 14:31:55 PST
Fixed in r40629.
Note You need to log in before you can comment on or make changes to this bug.