WebCore/rendering/RenderLayer.cpp
@@ -1499,7 +1499,7 @@ RenderLayer::updateScrollInfoAfterLayout()
             if (!m_inOverflowRelayout) {
                 // Our proprietary overflow: overlay value doesn't trigger a layout.
                 m_inOverflowRelayout = true;
-                renderer()->setNeedsLayout(true);
+                renderer()->setNeedsLayout(true, false);
                 if (renderer()->isRenderBlock())
                     toRenderBlock(renderer())->layoutBlock(true);
                 else
